# sqlalchemy-memory

./: .bumpversion.cfg  LICENSE  Makefile  README.md  benchmark.py  pyproject.toml  requirements.txt
.github/workflow/: ci.yml
.github/workflows/: ci.yml  release.yml
docs/: benchmarks.rst  commit_rollback.rst  conf.py  delete.rst  index.rst  insert.rst  query.rst  update.rst
sqlalchemy_memory/: __init__.py  events.py  logger.py  util.py
sqlalchemy_memory/async/: dialect.py
sqlalchemy_memory/asyncio/: __init__.py  dialect.py  session.py
sqlalchemy_memory/base/: __init__.py  connection.py  cursor.py  dialect.py  indexes.py  pending_changes.py  query.py  session.py  store.py
sqlalchemy_memory/base/resolvers/: __init__.py  abstract.py  date.py  json_extract.py
sqlalchemy_memory/helpers/: ordered_set.py  utils.py
tests/: conftest.py  models.py  test_advanced.py  test_aggregation.py  test_basic.py  test_comparison.py  test_crud.py  test_indexes.py  test_select.py
